fixing scrollbar

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -90,6 +90,7 @@ header{
     margin-bottom: 10%;
 }
 .body-box{
+    margin-top: 3%;
     background-color: #E1E7E9;
     width: 90%;
     margin-left: 5%;
